fix: overflow in gallery
- Add `truncate` class to label and tag value.
- When there are two many labels, the information area would overflow.

--- a/front/src/elements/Chip/chip.css
+++ b/front/src/elements/Chip/chip.css
@@ -1,6 +1,7 @@
 @layer utilities {
   .chip {
     @apply text-base 3xl:text-xl border-0 py-1 px-4 rounded-full cursor-default;
+    @apply max-w-80 truncate;
   }
   .chip-dark {
     @apply text-white bg-gray-700;
